# ct_string

./: .gitignore  CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  main.cpp
include/ct_string/: ct_string.ixx
test/: CMakeLists.txt  test_ct_string.cpp
